--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,54 @@
-apply plugin: 'java'
-apply plugin: 'eclipse'
-
-apply plugin: 'application'
-mainClassName = 'org.gradle.Hello'
-
-sourceCompatibility = 1.5
-version = '1.0'
-jar {
-    manifest {
-        attributes 'Implementation-Title': 'Gradle Quickstart', 'Implementation-Version': version
+buildscript {
+    repositories {
+        maven { url "http://repo.spring.io/libs-release" }
+        mavenLocal()
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.1.5.RELEASE")
     }
 }
 
+apply plugin: "java"
+apply plugin: "eclipse"
+apply plugin: "idea"
+apply plugin: "spring-boot"
+//apply plugin: "flyway"
+
+//apply plugin: 'application'
+//mainClassName = 'org.gradle.Hello'
+
+sourceCompatibility = 1.5
+version = '1.0'
+
+jar {
+    baseName = 'gradle-rest-service'
+    version =  '0.1.0'
+}
+
 repositories {
+    mavenLocal()
     mavenCentral()
+    maven { url "http://repo.spring.io/libs-release" }
 }
 
 dependencies {
 	compile "joda-time:joda-time:2.2"
     compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
+    compile "org.springframework.boot:spring-boot-starter-web"
+//  compile "org.flywaydb:flyway-gradle-plugin:3.0"
+    testCompile "junit:junit:4.+"
 }
 
-jar {
-    baseName = 'gradle-test'
-    version =  '0.1.0'
-}
+//flyway {
+//    url = 'jdbc:mysql://172.17.4.17:3306/zhaopin?useUnicode=true&amp;characterEncoding=utf-8'
+//    initOnMigrate = true
+//    user = 'ipintest'
+//    password = 'ipintest'
+//    initVersion = 0
+//    outOfOrder = true
+//    validateOnMigrate = false
+//}
 
 task wrapper(type: Wrapper) {
     gradleVersion = '1.11'
